full-moon/tests/cases/fail/parser/if-5/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/if-5
---
error[ast]: unexpected token `elseif`. elseif (expected `end` to conclude `if`)
  ┌─ source.lua:5:1
  │
5 │ elseif y then
  │ ^^^^^^

error[ast]: unexpected token `elseif`. elseif (unexpected token, this needs to be a statement)
  ┌─ source.lua:5:1
  │
5 │ elseif y then
  │ ^^^^^^

error[ast]: unexpected token `then`. then (unexpected expression when looking for a statement)
  ┌─ source.lua:5:10
  │
5 │ elseif y then
  │          ^^^^

error[ast]: unexpected token `then`. then (unexpected token, this needs to be a statement)
  ┌─ source.lua:5:10
  │
5 │ elseif y then
  │          ^^^^


